cluster/manifests/fluentd/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: fluentd-forward
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: fluentd-forward
      app.kubernetes.io/component: ""
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./fluentd-aggregator-proxy.fluentd.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
        - default/kubernetes.default.svc.cluster.local
        - default/etcd.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: fluentd-aggregator-proxy
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: fluentd-aggregator
      app.kubernetes.io/component: proxy
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./fluentd-aggregator.fluentd.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: fluentd-aggregator
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: fluentd-aggregator
      app.kubernetes.io/component: ""
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
        - loki/loki-distributor.loki.svc.cluster.local
        - adhoc/adhoc-elasticsearch-ingest.adhoc.svc.cluster.local
        - knative-eventing/eventing-kafka-bootstrap.knative-eventing.svc.cluster.local
